--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -45,6 +45,11 @@ library(maptools)
   top:               50%;
   transform:         translateY(30%);
 }
+.kinda-center-mid {
+  position:          relative;
+  top:               50%;
+  transform:         translateY(15%);
+}
 
 .center-left {
   position:          relative;
@@ -72,12 +77,33 @@ library(maptools)
 
 # COVID-19
 
-[Headline]
+.pull-left[
+  <center>
+  <img src="ft.png" alt="diagonal layout" height="150"/>
+  <a href="https://www.ft.com/coronavirus-latest">Financial Times</a>
+  </br>
+  </br>
+  <img src="wsj.png" alt="diagonal layout" height="100"/>
+  <div style="width:400; word-wrap: break-word;">
+    <a href="https://www.wsj.com/livecoverage/coronavirus-2020-04-29?mod=theme_coronavirus-ribbon">The Wall Street Journal</a>
+  </div>
+  </center>
+]
+
+.pull-right[
+  <center>
+    <img src="ec.png" alt="diagonal layout" height="150"/>
+    <a href="https://www.economist.com/news/2020/03/11/the-economists-coverage-of-the-coronavirus">The Economist</a>
+    </br>
+    </br>
+    <img src="nyt.png" alt="diagonal layout" height="100"/>
+    <a href="https://www.nytimes.com/news-event/coronavirus">The New York Times</a>
+  </center>
+]
 
 ---
 
 # COVID-19 Data Visualizations
-
 
 .pull-left[
   <center>
@@ -102,7 +128,6 @@ library(maptools)
     <a href="https://covid19.healthdata.org/united-states-of-america">https://covid19.healthdata.org/united-states-of-america</a>
   </center>
 ]
-
 
 ---
 
@@ -143,15 +168,6 @@ class: inverse
   - Interested modelers and citizens
 
 ]
-
-
-???
-
-[Collaborator]
-
-[Audience]
-
-Goal: [Goal]
 
 ---
 
@@ -394,7 +410,6 @@ Calculate [compound daily growth rate](https://en.wikipedia.org/wiki/Compound_an
 Captures the <span style="color: #FF1B70;">relative spread</span> of Cornoavirus
 
 Averaged over last 7 days
-
 ]
 
 
@@ -755,9 +770,14 @@ fig4
 
 # Wisconsin Dept. of Health Services
 
+.kinda-big-text[
 **Reka Sundaram-Stukel**
+]
 
-[Srikanth: Email]
+.center[
+<img src="rsundara-1.png" alt="diagonal layout" width="600"/>
+<img src="rsundara-2.png" alt="diagonal layout" width="600"/>
+]
 
 ---
 
@@ -936,9 +956,14 @@ fig2a
 
 # Gundersen Health System
 
+.kinda-big-text[
 **Corey Zarecki**
+]
 
-[Srikanth: Email]
+.center[
+<img src="cjzareck-1.png" alt="diagonal layout" width="600"/>
+<img src="cjzareck-2.png" alt="diagonal layout" width="600"/>
+]
 
 ---
 
@@ -1163,16 +1188,40 @@ fig9
 
 # Future Work
 
-[Split]
+.pull-left[
+.kinda-center-mid[
+  <center>
+  <img src="fw-the-bulwark.jpg" alt="diagonal layout" width="400"/>
+  <a href="https://thebulwark.com/newsletter-issue/one-chart-shows-which-states-are-in-trouble-with-covid-19/">The Bulwark</a>
+  </center>
+]
+]
+
+.pull-right[
+.center-mid[
+  <center>
+    <img src="fw-nyt-coronavirus-testing-states.png" alt="diagonal layout" width="400"/>
+    <a href="https://www.nytimes.com/interactive/2020/04/17/us/coronavirus-testing-states.html">The New York Times</a>
+  </center>
+]
+]
+
+???
 
 <!-- - Fit extended state-space SIR model with time-varying transmission rates using `eSIR` -->
 - Effective reproduction rate of the virus $R_t$
-- [Testing]
+- Testing
 
 ---
 layout: false
 class: inverse, center, middle
 
 # **Thank You!**
+
+<center>
+    <img src="ty-box.png" alt="diagonal layout" width="600"/>
+</center>
+
+???
 
 [FiveThirtyEight Comic Strip: George Box Quote]
