update report.Rmd with summary and conlusion

--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -53,16 +53,22 @@ kable_standard <- function(...) {
 
 ## Summary {-} 
 <!-- the {-} means don't number this section -->
-- benefit of looking at growth rates
-- maps provide cluster info and spatial context
-- this idea can be extended, but needs modifications for non-metro areas 
-- available on a website
+
+This report details a series of complementary visualizations to help public health officials and health system leaders understand the spread of COVID-19 in the state of Wisconsin.  The visualizations are available interactively at <https://data-viz.it.wisc.edu/wi-metro-growth-rate/> with data that updates daily and summaries that update weekly.  We rely on data from the New York Times collection of confirmed cases and deaths by county, the Corona Data Scraper world region time-series dataset, and population counts and metro area definitions from the U.S Census.  
+
+First, inspired by work from the New York Times, we describe two visualizations that plot the growth rate of COVID-19 cases measured as average daily change over the last 7 days.  By looking directly at the relative spread of cases, areas with high growth are easily identifiable.  In recent data, this has identified the areas of Green Bay, Janesville, Racine, and Appleton as areas of moderately high growth as of 5/4/2020.  Among these areas, Green Bay and Janesville are seeing a slow down in the growth rate, whereas Racine and Appleton are increasing their growth slightly.  In addition to looking at growth rates over time, measuring them against confirmed cases per capita helps to compare outbreaks that happen at different times.  From this visualization, we can see that Green Bay's outbreak appears much worse than the initial outbreak in Madison and Milwaukee on a per capita basis.  
+
+In the second major section, we demonstrate how choropleth maps of COVID-19 confirmed cases and deaths in metropolitan areas across the U.S. allow for a reasonable comparison of Wisconsin areas to well-known epicenters.  Many of the areas in Wisconsin appear to be affected less than other large metropolitan areas like New York, Chicago, Seattle, Detroit, and New Orleans.  These maps also allow us to see spatial trends in the data.  It doesn't appear that Wisconsin has major spatial outbreak clusters, whereas the New York/New Jersey/Connecticut area and much of Colorado seem to have large clusters of confirmed cases and deaths.  
+
+Finally, we describe some ad-hoc follow-up work relating to the idea of growth rates.  At the recommendation of Reka Sundaram-Stukel, we compare the growth rate of cases to the growth rate of unemployment claims to find that the unemployment claims slowed down much faster than confirmed cases, although the trends between the two are striking.  Working with Corey Zarecki at Gundersen Health, we developed visualizations with different measures of growth that work well for counties with small populations and few cases.  Here, looking directly at an average of new cases compared to cases, we were able to help identify hot-spots that might see the continued growth of cases.  Working with these individuals has demonstrated the value of our visualizations without relying on modeling approaches or predictions.  
 
 # Introduction
 
 - covid-19
 - covid-19 visualizations
-- nyt inspiration
+<!-- - nyt inspiration -->
+
+Among the variety of COVID-19 visualizations we saw, a set of visualizations by the New York Times jumped out for its focus on trying to determine where the virus was spreading quickly.  This worked well early on when only a few metropolitan areas were of focus but became difficult when many were in comparison.  Focussing specifically on Wisconsin metro areas offered an opportunity to search directly for trends that would be relevant to Wisconsin health offcials, health system leaders, and other interested parties.  This report describes the set of visualizations implemented based on this inspiration and feedback from key stakeholders.  
 
 # Data Sources
 
@@ -72,9 +78,9 @@ kable_standard <- function(...) {
 
 Much of the inspiration for this project came from two articles in the New York Times that showed visualizations highlighting how fast COVID-19 was spreading, and where.  The first, [*Four Ways to Measure Coronavirus Outbreaks in U.S. Metro Areas*](https://www.nytimes.com/interactive/2020/03/27/upshot/coronavirus-new-york-comparison.html), introduced a few visualizations and explained why looking at them provided different insights into the spread of the pandemic.  The second article, [*How Severe Are Coronavirus Outbreaks Across the U.S.? Look Up Any Metro Area*](https://www.nytimes.com/interactive/2020/04/03/upshot/coronavirus-metro-area-tracker.html), expanded on the visualizations by adding a few more and updating daily with new data and hot-spots.  While the later article had a feature to interactively look-up any metro area, Steve Goldstein thought that we could add value by re-creating these charts specifically for the Wisconsin metro areas, with a few regions for comparison.  
 
-We saw a lot of value in looking specifically at growth rates.  Growth rates are important in comparing different metropolitan areas because they capture the **relative spread** of the virus.  Both aspects are important: **spread** is an important metric to decide where to intervene and to understand whether a previous intervention is working, while **relative** measures matter when looking at smaller metro areas or metro areas where the disease started later.  Many of the visualizations that look at case counts over time (especially comparing many different areas) have a tendency to hide those regions where COVID-19 started spreading later.  By focussing directly on the growth rate, we can create visualizations that can identify areas in which the disease is growing fast, no matter when the virus started affecting the area. 
+We saw a lot of value in looking specifically at growth rates.  Growth rates are important in comparing different metropolitan areas because they capture the **relative spread** of the virus.  Both aspects are important: **spread** is an important metric to decide where to intervene and to understand whether a previous intervention is working, while **relative** measures matter when looking at smaller metro areas or metro areas where the disease started later.  Many of the visualizations that look at case count over time (especially comparing many different areas) tend to hide those regions where COVID-19 started spreading later.  By focussing directly on the growth rate, we can create visualizations that can identify areas in which the disease is growing fast, no matter when the virus started affecting the area. 
 
-We operationalize the growth rate of COVID-19 in a metropolitan area by the following calculation for the average daily change in confirmed cases.  It's worth noting that the original NYT article doesn't mention how they calculate this metric, but our calculation is based on a geometric growth rate averaged over the previous 7 days (to mitigate issues where reported cases dips over the weekend).  
+We operationalize the growth rate of COVID-19 in a metropolitan area by the following calculation for the average daily change in confirmed cases.  It's worth noting that the original NYT article doesn't mention how they calculate this metric, but our calculation is based on a geometric growth rate averaged over the previous 7 days (to mitigate issues where reported cases dip over the weekend).  
 
 \begin{equation}
 \textrm{avg daily change}_t =  \left( \frac{\textrm{cases}_t}{\textrm{cases}_{t-7}} \right)^{(1/7)} - 1 
@@ -82,7 +88,7 @@ We operationalize the growth rate of COVID-19 in a metropolitan area by the foll
 
 ## Daily Growth Rate over Time
 
-The first main plot shows the daily growth rate of confirmed cases over the last 4 weeks.  Figure \ref{fig:gr-time} shows this visualization from 5/4/2020 for the Wisconsin metropolitan areas with at least 30 cases.  Metro ares with fewer than 30 cases were omitted because of the large variance and potentially misleading results growth rates provide when the number of cases is small.  For example, in the early outbreak stage, an increase in confirmed cases from 4 to 8 looks like 100\% growth, but we don't expect that true cases actually doubled.  It's much more likely that these cases were simply discovered in one day.  
+The first main plot shows the daily growth rate of confirmed cases over the last 4 weeks.  Figure \ref{fig:gr-time} shows this visualization from 5/4/2020 for the Wisconsin metropolitan areas with at least 30 cases.  Metro areas with fewer than 30 cases were omitted because of the large variance and potentially misleading results growth rates provide when the number of cases is small.  For example, in the early outbreak stage, an increase in confirmed cases from 4 to 8 looks like 100\% growth, but we don't expect that true cases doubled.  It's much more likely that these cases were simply discovered in one day.  
 
 ```{r gr-time, fig.cap = "\\textit{figure caption}", out.width = "90%"}
 knitr::include_graphics(
@@ -90,15 +96,15 @@ knitr::include_graphics(
 )
 ```
 
-It's clear from Figure \ref{fig:gr-time} that the Green Bay metro area has seen the highest growth in the last 4 weeks, consistently around 15-20\% until the last week or so.  This is one strength of the plot, allowing us to see right now where the virus is spreading the most (assuming that confirmed cases follow similar trends to actual cases).  Another strength is being able to quickly see where the spread is speeding-up or slowing-down.  For example, Green Bay metro area has seen a slow down in the growth rate, although notably the number of cases is still *increasing* at a high rate.  It's also clear that a few areas--Oshkosh-Neenah, Eau Claire, and Appleton--are seeing an increase the spread, corresponding to an acceleration of the extent of COVID-19.  
+It's clear from Figure \ref{fig:gr-time} that the Green Bay metro area has seen the highest growth in the last 4 weeks, consistently around 15-20\% until the last week or so.  This is one strength of the plot, allowing us to see right now where the virus is spreading the most (assuming that confirmed cases follow similar trends to actual cases).  Another strength is being able to quickly see where the spread is speeding-up or slowing-down.  For example, the Green Bay metro area has seen a slow down in the growth rate, although notably, the number of cases is still *increasing* at a high rate.  It's also clear that a few areas--Oshkosh-Neenah, Eau Claire, and Appleton--are seeing an increase in the spread, corresponding to an acceleration of the extent of COVID-19.  
 
-As with any visualization, there are some areas where it is less helpful.  Because outbreaks may happen at different times, it's hard to compare metro areas where the spread happens at different times.  For example, Madison and Milwaukee saw large growth in confirmed cases in mid-March, but that doesn't show up when looking at data from the previous 4 weeks.  Another problem is that case data quality may vary a lot by place.  It seems likely that the bigger metro areas may have received more testing capacity early on in the pandemic, whereas smaller areas may have less reliable data.  
+As with any visualization, there are some areas where it is less helpful.  Because outbreaks may happen at different times, it's hard to compare metro areas where the spread happens at different times.  For example, Madison and Milwaukee saw a large growth in confirmed cases in mid-March, but that doesn't show up when looking at data from the previous 4 weeks.  Another problem is that case data quality may vary a lot by place.  It seems likely that the bigger metro areas may have received more testing capacity early on in the pandemic, whereas smaller areas may have less reliable data.  
 
-We added a number of interactivity features to this visualization.  Double-clicking on a region in the legend will start a comparison, and others can be added to the comparison by single-clicking on them.  Hovering over any data point provides details-on-demand including the metro area name, date, cases, and daily change.  This gives context to the visualization and allows a user to dig deep into the data that they care about.  
+We added several interactivity features to this visualization.  Double-clicking on a region in the legend will start a comparison, and others can be added to the comparison by single-clicking on them.  Hovering over any data point provides details-on-demand including the metro area name, date, cases, and daily change.  This gives context to the visualization and allows a user to dig deep into the data that they care about.  
 
 ## Daily Growth Rate by Case Count
 
-It can be important to distinguish between places where cases are growing fast with few cases and places where cases are numerous and still growing fast.  The later type of area is at a severe risk for overwhelming the hospital system, whereas the former may have more time to prepare.  The plot of growth rate over time has a hard time distinguishing between these two types of areas, which is where the second main plot can be useful.  Figure \ref{fig:gr-cases} shows the growth rate of daily cases compares to the confirmed cases per thousand people updated as of 5/4/2020.  This has the same y-axis as Figure \ref{fig:gr-time}, but the x-axis now shows a measure of the extent of COVID-19 in the metro area.  
+It can be important to distinguish between places where cases are growing fast with few cases and places where cases are numerous and still growing fast.  The later type of area is at severe risk for overwhelming the hospital system, whereas the former may have more time to prepare.  The plot of growth rate over time has a hard time distinguishing between these two types of areas, which is where the second main plot can be useful.  Figure \ref{fig:gr-cases} shows the growth rate of daily cases compares to the confirmed cases per thousand people updated as of 5/4/2020.  This has the same y-axis as Figure \ref{fig:gr-time}, but the x-axis now shows a measure of the extent of COVID-19 in the metro area.  
 
 ```{r gr-cases, fig.cap = "\\textit{figure caption}", out.width = "90%"}
 knitr::include_graphics(
@@ -146,6 +152,7 @@ Figure \ref{fig:gr-cases} suffers from the problem that it is difficult to read 
 
 # Conclusions
 
+During this pandemic, there's no shortage of visualizations to try and understand the rapidly changing state of the world.  Focussing on growth rates and maps of metropolitan areas, we implemented visualizations similar to those that have appeared in the New York Times for Wisconsin metro areas.  By measuring the growth in daily confirmed cases, the first two visualizations excel in showing areas with high growth, and whether that growth is increasing or decreasing.  This is important for public health officials and health system leaders to know where to spend resources to fight the spread of COVID-19.  Mapping confirmed cases and deaths by metro area helps to focus on spatial trends in the spread and group together counties from similar regions.  This work has opened the door for additional collaborations, including a striking comparison between the growth of cases and that of unemployment claims and visualizations for counties with few cases that mimic the spirit of our main plots.  In the midst of this pandemic, this work suggests that statisticians can provide value by using statistical thinking to design effective visualizations.  We hope to continue with future work that incorporates the differences in testing and other measures of disease spread such as $R_0$ from epidemiological models.  
 
 
 
